--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -330,6 +330,8 @@
     <string name="lx_contact_details">Contact details</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Enter contact details</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
