4028. AB Testing Search Influence Messaging.
* Center aligning the new AB Test messages in the lower half of the screen.
* Making sure the appropriate messages are shown when handling error (msg) cases.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2135,7 +2135,9 @@
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Searching for Hotels…</string>
     <!-- Message displayed when app is searching a location for hotels -->
-    <string name="progress_searching_hotels_working_hard">Searching! We\&apos;re working hard to find you the best hotel deals.</string>
+    <string name="progress_searching_message">Searching!</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">We\&apos;re working hard to find you the best hotel deals.</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels_hundreds">Searching hundreds of hotels for you!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
