--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -331,7 +331,8 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Enter contact details</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string>
+    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Show More</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
