Fix traveler detail strings on checkout. It showed Driver details.
Made attributes to pick string based on cars/lx theme.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -333,6 +333,10 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 	<!-- Offers show more string -->
     <string name="lx_show_more_offers">Show More</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Traveler details</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Enter traveler details</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
