--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -2,6 +2,74 @@
 <resources>
 
     <!-- Cars -->
+    <!-- Cars Calendar Strings -->
+    <!-- Tooltip description for selecting the start date -->
+    <string name="cars_calendar_start_date_label">다음 단계: 반납 날짜 선택</string>
+    <!-- Tooltip description when both start and end dates are selected -->
+    <string name="cars_calendar_end_date_label">수정하려면 드래그하세요.</string>
+    <!-- SeekBar tooltip description for pick up time-->
+    <string name="cars_time_slider_pick_up_label">인수 시간</string>
+    <!-- SeekBar tooltip description for drop off time-->
+    <string name="cars_time_slider_drop_off_label">반납 시간</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_template">일별 %s</string>
+    <!-- Cars price templates-->
+    <string name="cars_total_template">총 합계 %s</string>
+    <!-- Text for cars promo codes-->
+    <string name="cars_promo_code">프로모션 코드</string>
+    <!-- Text for cars sort and filter-->
+    <string name="cars_sort_filter">정렬 및 필터</string>
+    <!-- Slide to reserve -->
+    <string name="cars_slider_text">밀어서 예약하기</string>
+    <!-- Text for checkout toolbar-->
+    <string name="cars_checkout_text">결제</string>
+    <!-- Text for reserving car-->
+    <string name="cars_reserve_text">예약</string>
+    <!-- Text for viewing details-->
+    <string name="cars_view_details_text">세부 정보 보기</string>
+    <!-- Text for driver details toolbar-->
+    <string name="cars_driver_details_text">운전자 정보</string>
+    <!-- Text for payment details toolbar-->
+    <string name="cars_payment_details_text">결제 정보</string>
+    <!-- Text for enter driver details-->
+    <string name="enter_driver_details">운전자 정보 입력</string>
+    <!-- Text for select saved contacts-->
+    <string name="cars_saved_contacts_text">저장된 연락처 선택</string>
+    <!-- Text for enter payment details-->
+    <string name="enter_payment_details">결제 정보 입력</string>
+    <!-- Template for selected credit card-->
+    <string name="selected_card_template">만료일: %s</string>
+    <!-- Template for car offer detail-->
+    <string name="car_offer_template">%s 또는 동급 차량</string>
+    <!-- Car doors text-->
+    <string name="car_doors_text">도어</string>
+    <!-- Car bags text-->
+    <string name="car_bags_text">짐</string>
+    <!-- Car automatic transmission text-->
+    <string name="car_auto_tran_text">자동 변속기</string>
+    <!-- Car manual transmission text-->
+    <string name="car_man_tran_text">수동 변속기</string>
+
+    <!-- car result -->
+    <!-- car door range -->
+    <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
+    <!-- car details template -->
+    <string name="car_details_TEMPLATE">%1$s %2$s</string>
+
+    <!-- Cars Confirmation Screen -->
+    <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
+    <string name="calendar_car_title_TEMPLATE">인수 위치 %1$s</string>
+    <!-- Location for calendar event.  %1$s is the name of the pick up location -->
+    <string name="calendar_car_location_TEMPLATE">%1$s</string>
+    <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
+    <string name="calendar_car_desc_itinerary_TEMPLATE">익스피디아 일정 번호: %s</string>
+    <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
+    <string name="calendar_car_desc_support_TEMPLATE">익스피디아 고객 지원: %1$s 및 %2$s</string>
+    <!-- Showing local phone number in  car confirmation screen  -->
+    <string name="car_confirmation_local_support_TEMPLATE">현지 번호: %s</string>
+    <!-- Showing toll free phone number in  car confirmation screen  -->
+    <string name="car_confirmation_toll_free_support_TEMPLATE">무료 번호: %s</string>
+
     <!-- Car search label for pick-up time -->
     <string name="pick_up_time">인수 시간</string>
     <!-- Car search label for drop-off time-->
@@ -30,15 +98,51 @@
     <string name="error_missing_end_date_param">완료일이 없습니다.</string>
     <!-- Temporary String for general error message -->
     <string name="error_car">오류가 발생했습니다. 검색 매개변수를 확인해 주세요.</string>
+    <!-- Car search error -->
+    <string name="error_car_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string>
     <!-- Checkout -->
+    <!-- Car model templates-->
+    <string name="car_model_name_template">%1$s 또는 동급 차량</string>
+
+    <string name="preparing_checkout_message">결제 준비 중…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">터미널 내 데스크 및 차량</string>
+    <!-- Car checkout cost breakdown total due today -->
+    <string name="car_cost_breakdown_due_today">오늘 결제할 총 금액</string>
+    <!-- Car checkout cost breakdown total due at pick up -->
+    <string name="car_cost_breakdown_total_due">인수 시 결제할 총 금액</string>
+    <!-- Car checkout cost breakdown for alert button -->
+    <string name="car_cost_breakdown_button_text">완료</string>
+    <!-- Car checkout rental fare breakdown types -->
+    <!--Cost breakdown type base -->
+    <string name="car_rental_breakdown_base">렌터카</string>
+    <!--Cost breakdown type taxes and fees -->
+    <string name="car_rental_breakdown_taxes_and_fees">세금 및 수수료 예상액</string>
+    <!--Cost breakdown type insurance -->
+    <string name="car_rental_breakdown_insurance">보험</string>
+    <!--Cost breakdown type drop off charge -->
+    <string name="car_rental_breakdown_drop_off_charges">반납 요금</string>
     <!-- Unlimited mileage -->
     <string name="unlimited_mileage">무제한 마일리지</string>
     <!-- Checkout confirmation message (temporary) -->
-    <string name="successful_checkout_TEMPLATE">예약되었습니다! 일정 번호: %1$s</string>
+    <string name="successful_checkout_TEMPLATE">일정 번호 %1$s</string>
     <!-- Error message for some missing checkout params -->
     <string name="error_missing_checkout_params">체크아웃 매개변수가 없습니다.</string>
+    <!--Adding hotel from Car Confirmation -->
+    <string name="successful_checkout_cross_sell_hotel">%1$s 호텔</string>
+    <!--Adding flight from Car Confirmation -->
+    <string name="successful_checkout_cross_sell_flight">%1$s행 항공편</string>
+    <!-- Car confirmation screen label -->
+    <string name="successful_checkout_pickup_label">인수 위치:</string>
+    <!-- Car confirmation pickup time label e.g. March 10, 12:30pm to -->
+    <string name="car_confirmation_pickup_time_TEMPLATE">%1$s -</string>
+    <!-- Car confirmation itin text -->
+    <string name="successful_checkout_email_label">일정이 전송된 수신 주소:</string>
+    <!-- Car confirmation directions text -->
+    <string name="car_confirmation_directions">%1$s까지의 길 안내</string>
+    <!-- Button label for calling customer support -->
+    <string name="call_customer_support">고객 지원에 연락</string>
+    <!-- Error message for some missing checkout params -->
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">목적지 입력</string>
@@ -69,9 +173,145 @@
     <!-- Button text for when flight origin is missing -->
     <string name="missing_flight_info_button_prompt">공항 선택</string>
 
+    <!-- LX -->
+    <!-- Search widget header text -->
+    <string name="search_widget_heading">즐길거리 검색</string>
+    <!-- Search widget location hint -->
+    <string name="search_location_hint">위치 입력</string>
+    <!-- Error messge for missing Location in LX search form -->
+    <string name="lx_error_missing_location">위치 정보가 누락되었습니다.</string>
+    <!-- Error messge for missing start date in LX search form -->
+    <string name="lx_error_missing_start_date">날짜가 누락되었습니다.</string>
+    <!-- Button to show calendar and selected dates -->
+    <string name="select_lx_search_dates">날짜 선택</string>
+    <!-- Activity details highlights heading -->
+    <string name="highlights_activity_details">하이라이트</string>
+    <!-- Activity details description heading -->
+    <string name="description_activity_details">설명</string>
+    <!-- Activity details location heading -->
+    <string name="location_activity_details">위치</string>
+    <!-- Free cancellation message for LX activity -->
+    <string name="activity_free_cancellation">무료 취소</string>
+    <!-- Template for ticket details -->
+    <string name="ticket_details_template">%1$s, %2$s(%3$s)</string>
+    <!-- Template for ticket selection summary -->
+    <string name="offer_book_now_TEMPLATE">지금 예약 %1$s%2$s</string>
+    <!-- Template for tickets type and count  summary -->
+    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
+    <!-- LX Ticket type names -->
+    <string name="ticket_type_traveler">여행객</string>
+    <string name="ticket_type_adult">어른</string>
+    <string name="ticket_type_child">아동</string>
+    <string name="ticket_type_infant">유아</string>
+    <string name="ticket_type_youth">청소년</string>
+    <string name="ticket_type_senior">고령자</string>
+    <string name="ticket_type_group">단체</string>
+    <string name="ticket_type_couple">커플</string>
+    <string name="ticket_type_two_adults">어른 2명</string>
+    <string name="ticket_type_military">군인</string>
+    <string name="ticket_type_student">학생</string>
+    <string name="ticket_type_sedan">세단</string>
+    <string name="ticket_type_minivan">미니밴</string>
+    <string name="ticket_type_water_taxi">수상 택시</string>
+    <string name="ticket_type_suv">SUV</string>
+    <string name="ticket_type_executive_car">이그제큐티브 차량</string>
+    <string name="ticket_type_luxury_car">럭셔리 차량</string>
+    <string name="ticket_type_limousine">리무진</string>
+    <string name="ticket_type_towncar">타운카</string>
+    <string name="ticket_type_vehicle_parking_spot">주차 공간</string>
+    <string name="ticket_type_book">책</string>
+    <string name="ticket_type_guide">가이드</string>
+    <string name="ticket_type_travel_card">관광 카드</string>
+    <string name="ticket_type_boat">보트</string>
+    <string name="ticket_type_motorcycle">오토바이</string>
+    <string name="ticket_type_ceremony">행사</string>
+    <string name="ticket_type_calling_card">전화 카드</string>
+    <string name="ticket_type_pass">패스</string>
+    <string name="ticket_type_minibus">미니버스</string>
+    <string name="ticket_type_helicopter">헬리콥터</string>
+    <string name="ticket_type_device">기기</string>
+    <string name="ticket_type_room">객실</string>
+    <string name="ticket_type_carriage">마차</string>
+    <string name="ticket_type_buggy">버기카</string>
+    <string name="ticket_type_atv">ATV</string>
+    <string name="ticket_type_jet_ski">제트스키</string>
+    <string name="ticket_type_scooter">스쿠터</string>
+    <string name="ticket_type_scooter_car">스쿠터카</string>
+    <string name="ticket_type_snowmobile">스노모빌</string>
+    <string name="ticket_type_day">일별</string>
+    <string name="ticket_type_bike">자전거</string>
+    <string name="ticket_type_week">주별</string>
+    <string name="ticket_type_subscription">구독</string>
+    <string name="ticket_type_electric_bike">전기자전거</string>
+    <string name="ticket_type_segway">세그웨이</string>
+    <string name="ticket_type_vehicle">차량</string>
+    <!-- Activity search results per ticket type -->
+    <string name="per_ticket_type_traveler">여행객 1명당</string>
+    <string name="per_ticket_type_adult">어른 1명당</string>
+    <string name="per_ticket_type_child">아동 1명당</string>
+    <string name="per_ticket_type_infant">유아 1명당</string>
+    <string name="per_ticket_type_youth">청소년 1명당</string>
+    <string name="per_ticket_type_senior">고령자 1명당</string>
+    <string name="per_ticket_type_group">단체 1팀당</string>
+    <string name="per_ticket_type_couple">커플 1쌍당</string>
+    <string name="per_ticket_type_two_adults">어른 2명당</string>
+    <string name="per_ticket_type_military">군인 1명당</string>
+    <string name="per_ticket_type_student">학생 1명당</string>
+    <string name="per_ticket_type_sedan">세단 1대당</string>
+    <string name="per_ticket_type_minivan">미니밴 1대당</string>
+    <string name="per_ticket_type_water_taxi">수상 택시 1대당</string>
+    <string name="per_ticket_type_suv">SUV 1대당</string>
+    <string name="per_ticket_type_executive_car">이그제큐티브 차량 1대당</string>
+    <string name="per_ticket_type_luxury_car">럭셔리 차량 1대당</string>
+    <string name="per_ticket_type_limousine">리무진 1대당</string>
+    <string name="per_ticket_type_towncar">타운카 1대당</string>
+    <string name="per_ticket_type_vehicle_parking_spot">주차 공간 1개당</string>
+    <string name="per_ticket_type_book">책 1권당</string>
+    <string name="per_ticket_type_guide">가이드 1명당</string>
+    <string name="per_ticket_type_travel_card">관광 카드 1개당</string>
+    <string name="per_ticket_type_boat">보트 1대당</string>
+    <string name="per_ticket_type_motorcycle">오토바이 1대당</string>
+    <string name="per_ticket_type_ceremony">행사 1회당</string>
+    <string name="per_ticket_type_calling_card">전화 카드 1개당</string>
+    <string name="per_ticket_type_pass">패스 1개당</string>
+    <string name="per_ticket_type_minibus">미니버스 1대당</string>
+    <string name="per_ticket_type_helicopter">헬리콥터 1대당</string>
+    <string name="per_ticket_type_device">기기 1개당</string>
+    <string name="per_ticket_type_room">객실 1개당</string>
+    <string name="per_ticket_type_carriage">마차 1대당</string>
+    <string name="per_ticket_type_buggy">버기카 1대당</string>
+    <string name="per_ticket_type_atv">ATV 1대당</string>
+    <string name="per_ticket_type_jet_ski">제트스키 1대당</string>
+    <string name="per_ticket_type_scooter">스쿠터 1대당</string>
+    <string name="per_ticket_type_scooter_car">스쿠터카 1대당</string>
+    <string name="per_ticket_type_snowmobile">스노모빌 1대당</string>
+    <string name="per_ticket_type_day">일당</string>
+    <string name="per_ticket_type_bike">자전거 1대당</string>
+    <string name="per_ticket_type_week">주당</string>
+    <string name="per_ticket_type_subscription">구독 1건당</string>
+    <string name="per_ticket_type_electric_bike">전기자전거 1대당</string>
+    <string name="per_ticket_type_segway">세그웨이 1대당</string>
+    <string name="per_ticket_type_vehicle">차량 1대당</string>
+
+    <!-- LX Strings -->
+    <!-- Slide to book -->
+    <string name="lx_slider_text">밀어서 예약하기</string>
+    <!-- Text for checkout toolbar-->
+    <string name="lx_checkout_text">예약하기</string>
+    <!-- Total Price with currency -->
+    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
+    <!-- Free cancellation -->
+    <string name="lx_free_cancellation">무료 취소</string>
+    <!-- Total with tax -->
+    <string name="lx_total_with_tax">세금 포함 총계</string>
+    <!-- Contact Details Toolbar -->
+    <string name="lx_contact_details">연락처 정보</string>
+    <!-- Enter contact details-->
+    <string name="lx_enter_contact_details">연락처 정보 입력</string>
+
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
-    <string name="Sort_and_Filter">정렬 &amp; 필터</string>
+    <string name="Sort_and_Filter">정렬 및 필터</string>
     <!-- "Done" list header label -->
     <string name="Done">완료</string>
     <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
@@ -325,7 +565,7 @@
     <!-- Login failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="login_failed_try_again">로그인하지 못했습니다. 이메일과 비밀번호가 올바른 경우 앱의 국가 설정이 올바른지 확인해 주세요.</string>
     <!-- User needs to reset password -->
-    <string name="login_reset_password">모든 익스피디아 사이트에 사용할 새로운 계정을 만들어 주세요.\n아래의 \&apos;비밀번호를 잊으셨나요?\&apos; 링크를 이용해 비밀번호를 재설정해 주세요.</string>
+    <string name="login_reset_password">모든 익스피디아 사이트에 사용할 새로운 계정을 만들어 주세요.&lt;br&gt;아래의 \&apos;비밀번호를 잊으셨나요?\&apos; 링크를 이용해 비밀번호를 재설정해 주세요.</string>
     <!-- Facebook connect expedia password hint -->
     <string name="expedia_password_hint">익스피디아 비밀번호</string>
     <!-- Link accounts -->
@@ -358,6 +598,19 @@
     <string name="nav_flights">항공</string>
     <!-- Hotels -->
     <string name="nav_hotels">호텔</string>
+    <!-- Cars -->
+    <string name="nav_cars">렌터카</string>
+
+    <!-- New launch screen -->
+    <!-- Shop travel label -->
+    <string name="shop_travel">여행 예약</string>
+    <!-- Top deals tonight -->
+    <string name="nearby_deals_title">오늘 밤 인기 특가 상품</string>
+    <!-- See all nearby deals -->
+    <string name="nearby_deals_expand">모두 보기</string>
+    <!-- Percent off template, e.g. 50% off -->
+    <string name="percent_off_TEMPLATE">%2.0f%% 할인</string>
+
 
     <!-- Launch screen -->
     <!-- Label for launch screen hotel button secondary text -->
@@ -427,6 +680,7 @@
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">고객님의 %s 티켓은 내일부터 이용하실 수 있습니다.</string>
     <!-- Notification text for a desktop booking itinerary being available on the user's device -->
     <string name="Itinerary_ready">일정 준비 완료</string>
+
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -703,6 +957,44 @@
     <string name="car_category_special">스페셜</string>
     <!-- Car category: oversize -->
     <string name="car_category_oversize">특대형</string>
+
+    <!-- Car category for results and details screen -->
+    <!-- Car category: mini -->
+    <string name="car_category_result_mini">미니</string>
+    <!-- Car category: economy -->
+    <string name="car_category_result_economy">소형</string>
+    <!-- Car category: compact -->
+    <string name="car_category_result_compact">중소형</string>
+    <!-- Car category: midize -->
+    <string name="car_category_result_midsize">중형</string>
+    <!-- Car category: standard -->
+    <string name="car_category_result_standard">표준</string>
+    <!-- Car category: fullsize -->
+    <string name="car_category_result_fullsize">대형</string>
+    <!-- Car category: premium -->
+    <string name="car_category_result_premium">프리미엄</string>
+    <!-- Car category: luxury -->
+    <string name="car_category_result_luxury">고급대형</string>
+    <!-- Car category: mini elite -->
+    <string name="car_category_result_mini_elite">미니 엘리트</string>
+    <!-- Car category: economy elite -->
+    <string name="car_category_result_economy_elite">소형 엘리트</string>
+    <!-- Car category: compact elite -->
+    <string name="car_category_result_compact_elite">중소형 엘리트</string>
+    <!-- Car category: midize elite -->
+    <string name="car_category_result_midsize_elite">중형 엘리트</string>
+    <!-- Car category: standard elite -->
+    <string name="car_category_result_standard_elite">표준 엘리트</string>
+    <!-- Car category: fullsize elite -->
+    <string name="car_category_result_fullsize_elite">대형 엘리트</string>
+    <!-- Car category: premium elite -->
+    <string name="car_category_result_premium_elite">프리미엄 엘리트</string>
+    <!-- Car category: luxury elite -->
+    <string name="car_category_result_luxury_elite">고급대형 엘리트</string>
+    <!-- Car category: special -->
+    <string name="car_category_result_special">스페셜</string>
+    <!-- Car category: oversize -->
+    <string name="car_category_result_oversize">특대형</string>
 
     <!-- Car types -->
     <string name="car_type_two_door">2도어 차량</string>
@@ -1527,6 +1819,8 @@
     <string name="air_attach_expires">혜택 만료까지 남은 시간:</string>
     <!-- Air attach offer expiration date -->
     <string name="air_attach_expiration_date_TEMPLATE">%d일</string>
+    <!-- Air attach expires today alert -->
+    <string name="air_attach_expires_today">혜택이 오늘 만료됩니다!</string>
     <!-- Air attach add hotel button -->
     <string name="air_attach_add_hotel">호텔 추가</string>
     <!-- Air attach add hotel button subtitle -->
