--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -157,6 +157,14 @@
     <!-- Car error strings -->
     <!-- Message for user that something went wrong -->
     <string name="oops">Oops! Something happened, please try again.</string>
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Please verify your pick-up date.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Please verify your drop-off date.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">This date is too far out, please choose a closer date.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Please increase your reservation duration.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_time_out">Still there? Your session has expired. Please try your search again.</string>
     <!-- Shown to user when they try to book something already booked -->
